# ws

params/: BT.xml  nav2.yaml  slam.yaml
src/audio_common/audio_common_msgs/action/: TTS.action
src/create_robot/create_bringup/config/: default.yaml
src/open_manipulator/open_manipulator_x_teleop/: package.xml  setup.py
src/open_manipulator/open_manipulator_x_teleop/open_manipulator_x_teleop/script/: server_carry_teleop.py
src/open_manipulator_msgs/: CMakeLists.txt
src/robotis_manipulator/: README.md
src/yolov8_carry_my_laggage/ros_handson_packages/python_tutorial/: package.xml  setup.py
src/yolov8_carry_my_laggage/ros_handson_packages/python_tutorial/python_tutorial/: arm.py  center_controller_lugguge.py  center_controller_receptionist.py  chair_detection.py  cv_qrcode.py  image_realsense.py  image_sub.py  person_detection_receptionist.py  publish_tf_bag.py  realsense_track.py  simple_realsense.py  simple_yolo.py  test.py  text_split.py
