<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_tutorial</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="koki@todo.todo">koki</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>eigen</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>librealsense2</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_updater</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>sensor_msgs_py</test_depend>
  <test_depend>python3-numpy</test_depend>
  <test_depend>python3-tqdm</test_depend>
  <test_depend>sensor_msgs_py</test_depend>
  <test_depend>python3-requests</test_depend>
  <test_depend>tf2_ros_py</test_depend>
  <test_depend>ros2topic</test_depend>
  
  <exec_depend>launch_ros</exec_depend>
  <build_depend>ros_environment</build_depend>
  
  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
  </export>
</package>
